[package]
name = "kvproto"
version = "0.0.1"
keywords = ["TiKV"]
edition = "2018"
build = "build.rs"

[lib]
name = "kvproto"
path = "src/lib.rs"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf"]
prost-codec = ["prost", "prost-derive", "bytes"]
regenerate = []

[dependencies]
protobuf = { version = "~2.0", optional = true }
prost = { version = "0.4", optional = true }
prost-derive = { version = "0.4", optional = true }
bytes = { version = "0.4.11", optional = true }
futures = "0.1"
grpcio = "0.4"
raft = "0.4"

# for tower-grpc
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }

[dependencies.tower-grpc]
git = "https://github.com/hicqu/tower-grpc"
branch = "protobuf-instead-prost"

[dependencies.tower-grpc-build]
path = "/home/qupeng/github.com/tower-rs/tower-grpc/tower-grpc-build"
features = ["tower-hyper"]

[build-dependencies]
protobuf-build = "0.1"

# TODO: use patch instead if rust-lang/cargo#6762 is resolved.
[replace]
"protobuf-codegen:2.0.6" = { git = "https://github.com/pingcap/rust-protobuf.git", rev = "d9dc5ba0d8ecdc32dfd52c0edd06a98bbcd96b4e" }
"protobuf:2.0.6" = { git = "https://github.com/pingcap/rust-protobuf.git", rev = "d9dc5ba0d8ecdc32dfd52c0edd06a98bbcd96b4e" }

[[bin]]
name = "tower-grpc-codegen"
path = "src/tower-grpc-codegen.rs"
